[tool.poetry]
name = "fantasy"
version = "0.1.0"
description = ""
authors = ["nirgodin <70273595+nirgodin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
pandas = "2.2.2"
selenium = "4.21.0"
webdriver-manager = "4.0.1"
scikit-learn = "1.4.2"
psycopg2 = "2.9.9"
seaborn = "0.13.2"
plotly = "5.22.0"
aiohttp = "3.9.5"
asyncio-pool = "0.6.0"
tqdm = "4.66.4"
bs4 = "0.0.2"
lxml = "5.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
